workspace/log/build_2026-06-04_14-05-50/follower_control/stdout_stderr.log
running egg_info
writing ../../build/follower_control/follower_control.egg-info/PKG-INFO
writing dependency_links to ../../build/follower_control/follower_control.egg-info/dependency_links.txt
writing entry points to ../../build/follower_control/follower_control.egg-info/entry_points.txt
writing requirements to ../../build/follower_control/follower_control.egg-info/requires.txt
writing top-level names to ../../build/follower_control/follower_control.egg-info/top_level.txt
reading manifest file '../../build/follower_control/follower_control.egg-info/SOURCES.txt'
writing manifest file '../../build/follower_control/follower_control.egg-info/SOURCES.txt'
running build
running build_py
copying follower_control/follower_control_node.py -> /home/quanmh25/quanmh/diffdrive_aruco_follow/workspace/build/follower_control/build/lib/follower_control
copying follower_control/leader_control_node.py -> /home/quanmh25/quanmh/diffdrive_aruco_follow/workspace/build/follower_control/build/lib/follower_control
copying follower_control/modules/utils.py -> /home/quanmh25/quanmh/diffdrive_aruco_follow/workspace/build/follower_control/build/lib/follower_control/modules
running install
running install_lib
copying /home/quanmh25/quanmh/diffdrive_aruco_follow/workspace/build/follower_control/build/lib/follower_control/follower_control_node.py -> /home/quanmh25/quanmh/diffdrive_aruco_follow/workspace/install/follower_control/lib/python3.12/site-packages/follower_control
copying /home/quanmh25/quanmh/diffdrive_aruco_follow/workspace/build/follower_control/build/lib/follower_control/modules/utils.py -> /home/quanmh25/quanmh/diffdrive_aruco_follow/workspace/install/follower_control/lib/python3.12/site-packages/follower_control/modules
copying /home/quanmh25/quanmh/diffdrive_aruco_follow/workspace/build/follower_control/build/lib/follower_control/leader_control_node.py -> /home/quanmh25/quanmh/diffdrive_aruco_follow/workspace/install/follower_control/lib/python3.12/site-packages/follower_control
byte-compiling /home/quanmh25/quanmh/diffdrive_aruco_follow/workspace/install/follower_control/lib/python3.12/site-packages/follower_control/follower_control_node.py to follower_control_node.cpython-312.pyc
  File "/home/quanmh25/quanmh/diffdrive_aruco_follow/workspace/install/follower_control/lib/python3.12/site-packages/follower_control/follower_control_node.py", line 63
    self.aruco_pd_controller = PDController(kp=[0.8, 1.8, 0.0], kd=[0.01, 0.01 0.0])
                                                                          ^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

byte-compiling /home/quanmh25/quanmh/diffdrive_aruco_follow/workspace/install/follower_control/lib/python3.12/site-packages/follower_control/modules/utils.py to utils.cpython-312.pyc
byte-compiling /home/quanmh25/quanmh/diffdrive_aruco_follow/workspace/install/follower_control/lib/python3.12/site-packages/follower_control/leader_control_node.py to leader_control_node.cpython-312.pyc
running install_data
running install_egg_info
removing '/home/quanmh25/quanmh/diffdrive_aruco_follow/workspace/install/follower_control/lib/python3.12/site-packages/follower_control-0.0.0-py3.12.egg-info' (and everything under it)
Copying ../../build/follower_control/follower_control.egg-info to /home/quanmh25/quanmh/diffdrive_aruco_follow/workspace/install/follower_control/lib/python3.12/site-packages/follower_control-0.0.0-py3.12.egg-info
running install_scripts
Installing follower_control_node script to /home/quanmh25/quanmh/diffdrive_aruco_follow/workspace/install/follower_control/lib/follower_control
Installing leader_control_node script to /home/quanmh25/quanmh/diffdrive_aruco_follow/workspace/install/follower_control/lib/follower_control
writing list of installed files to '/home/quanmh25/quanmh/diffdrive_aruco_follow/workspace/build/follower_control/install.log'
